Fixed #1018 - Static Analyze: Performance issues - part 1
Applied following suggestions
- Boolean constructor call
- Call to 'asList' with only one argument
- 'StringBuilder buffer' can be replaced with 'String'
- Single character string concatenation
- Single character string argument in `String.indexOf()` call
- Redundant String constructor call
- Redundant call to `String.format()`
- Redundant `substring(0)`